lang/tests/snapshots/typecheck/index_out_of_bounds.snap
---
source: lang/tests/typecheck.rs
---
error: Index `5` is out of bounds for a vector of length 2
   ╭─[ test.zippel:3:14 ]
   │
 3 │     verify(a[5] == a[0])
   │            ┬ ┬  
   │            │ ╰── index `5`
   │            │    
   │            ╰──── `a` has length 2
───╯
